Ticket #27724: Creation of fhr css styles. Prevention of line breaks in table toolbars and certain button labels.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -87,8 +87,8 @@ th.tblTitleRight {
 
 .tl-table__title-toolbar {
 	border-spacing: 0px;
-	float: right; 
-	margin-right: 2px; 
+	float: right;
+	white-space: nowrap;
 }
 
 input.tblRowSelector {
